[package]
name = "hob"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arrow = "57.1.0"
arrow-array = "57.1.0"
arrow-schema = "57.1.0"
env_logger = "0.11.8"
log = "0.4.29"
parquet = { version = "57.1.0", features = ["async"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
